--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "advice-generator-app-main",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://gabrielamrs.io/advice-generator-app-main",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "sh deploy.sh"
+    "deploy": "vue-cli-service build && gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^0.26.1",
@@ -20,6 +21,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "gh-pages": "^5.0.0",
     "node-sass": "^7.0.1",
     "sass-loader": "^12.6.0",
     "webpack": "^5.0.0"
